@@ -4,6 +4,7 @@ Sastre 0.31 [Nov 18, 2019]
 Enhancements:
     - Template attach and reattach functions now support CLI templates. This means that restore --attach and --force
       options now support CLI templates in addition to feature-based device templates.
+    - Added --regex option to backup task, allowing finner granularity into items included in the backup.
 
 
 Sastre 0.30 [Oct 25, 2019]
